--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
+.main {
+  width: 100%;
+}
+
 .App {
-  text-align: center;
+  margin-left: 7%; 
+  height: 100px;
+  background-image: url("scary.png");
+  background-repeat: repeat;
+  background-size: contain;
+}
+
+.logo {
+  width: 95%; 
+  height: 100px; 
+  float: left;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav {
+  width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
