--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,6 @@
 .main {
   width: 100%;
-}
-
-.App {
-  margin-left: 7%; 
-  height: 100px;
-  background-image: url("scary.png");
-  background-repeat: repeat;
-  background-size: contain;
-}
-
-.logo {
-  width: 95%; 
-  height: 100px; 
-  float: left;
-}
-
-.App-logo {
-  height: 10vmin;
-  pointer-events: none;
+  background-color: gray;
 }
 
 .nav {
