--- a/src/TextStyles.css
+++ b/src/TextStyles.css
@@ -39,3 +39,10 @@
     vertical-align: top;
     margin-top: 2%;
 }
+
+.line {
+    display: inline-block;
+    width: 100%;
+    height: 3px;
+    background: rgb(251, 255, 0);
+  }
