--- a/src/header.css
+++ b/src/header.css
@@ -26,7 +26,7 @@
     position: absolute;
     margin-left: 90%;
     margin-top: 1%;
-    width: 200px;
+    width: 9.9%;
     height: 50px;
     border: 1px solid #000; 
     background-color: rgb(105, 0, 105);
