Final Background Added

--- a/src/header.css
+++ b/src/header.css
@@ -29,5 +29,5 @@
     width: 9.9%;
     height: 50px;
     border: 1px solid #000; 
-    background-color: rgb(105, 0, 105);
+    background-color: #831187;
   }
