--- a/src/quiz.css
+++ b/src/quiz.css
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: space-evenly;
     margin-left: 35%;
+    margin-top: 10%;
   }
 
 .score-section {
@@ -19,7 +20,6 @@
     color: white;
   }
   
-  /* QUESTION/TIMER/LEFT SECTION */
   .question-section {
     width: 100%;
     position: relative;
@@ -49,7 +49,6 @@
     text-align: center;
   }
   
-  /* ANSWERS/RIGHT SECTION */
   .answer-section {
     width: 100%;
     display: flex;
