--- a/src/TextStyles.css
+++ b/src/TextStyles.css
@@ -27,7 +27,7 @@ html {
 }
 
 .body {
-    height: 100vh;
+    /* height: 100vh; */
     overflow: auto;
     font-style: normal;
     font-family: Arial;
